samples/_failures_safe/1761595209_3dff19_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_443809d0.c: In function ‘main’:
./samples/SAFE/__tmp_443809d0.c:179:33: error: expected ‘]’ at end of input
  179 |     if (len > 0 && input[len - 1
      |                                 ^
      |                                 ]
./samples/SAFE/__tmp_443809d0.c:179:5: error: expected declaration or statement at end of input
  179 |     if (len > 0 && input[len - 1
      |     ^~
